--- a/index.html
+++ b/index.html
@@ -8,25 +8,36 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="cell"></div>
-<div class="cell"></div>
-<div class="cell"></div>
-<div class="cell"></div>
+    <div class="Counter">Counter Found: 0/8</div>
 
-<div class="cell"></div>
-<div class="cell"></div>
-<div class="cell"></div>
-<div class="cell"></div>
+    <div class="game">
 
-<div class="cell"></div>
-<div class="cell"></div>
-<div class="cell"></div>
-<div class="cell"></div>
+        <div class="colunm">
+            <div class="cell ">1</div>
+            <div class="cell">2</div>
+            <div class="cell">3</div>
+            <div class="cell">4</div>
+        </div>
+        <div class="colunm" >
+            <div class="cell ">5</div>
+            <div class="cell">6</div>
+            <div class="cell">7</div>
+            <div class="cell">8</div>
+        </div>
+        <div class="colunm">
+            <div class="cell ">9</div>
+            <div class="cell">10</div>
+            <div class="cell">11</div>
+            <div class="cell">12</div>
+        </div>
+        <div class="colunm">
+            <div class="cell">13</div>
+            <div class="cell">14</div>
+            <div class="cell">15</div>
+            <div class="cell">16</div>
+        </div>
+    </div>
 
-<div class="cell"></div>
-<div class="cell"></div>
-<div class="cell"></div>
-<div class="cell"></div>
     
 </body>
 </html>
