--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="contanier">
         <h2>Memory Card Game
         </h2>
+        <h2 class="win"></h2>
 
         <div class="h1">
             <div class="Time"> <span>Time: </span>00:00:00</div>
@@ -49,6 +50,7 @@
 
         <div class="button-container">
             <button class="button">Reset Game</button>
+
         </div>
         
     </div>
