function that make links active added

--- a/levelThree.html
+++ b/levelThree.html
@@ -77,12 +77,10 @@
     <div class="contanier-levels">
         <h3>Levels</h3>
         <ul>
-            <li><a href="levelOne.html">Level 1</a>
+            <li><a href="levelOne.html"   value="0" class="link" >Level 1</a>
             </li>
-            <li><a href="levelTwo.html">Level 2</a>
-            <li><a href="levelThree.html">Level 3</a>
-
-
+            <li><a href="levelTwo.html"   value="1" class="link">Level 2</a>
+            <li><a href="levelThree.html" value="2" class="link">Level 3</a>
         </ul>
        
     </div>
