--- a/levelTwo.html
+++ b/levelTwo.html
@@ -12,6 +12,8 @@
 
     <div class="contanier">
         <h2>Memory Card Game
+            <h4>Colors Matching
+            </h4>
         </h2>
         <h2 class="win"></h2>
 
