--- a/levelTwo.html
+++ b/levelTwo.html
@@ -59,7 +59,7 @@
     <div class="contanier-levels">
         <h3>Levels</h3>
         <ul>
-            <li><a href="levelOne.html"   value="0" class="link" >Level 1</a>
+            <li><a href="index.html"   value="0" class="link" >Level 1</a>
             </li>
             <li><a href="levelTwo.html"   value="1" class="link">Level 2</a>
             <li><a href="levelThree.html" value="2" class="link">Level 3</a>
